[package]
name = "temp-lang"
version = "0.1.0"
authors = ["Mohit Karekar <karekar.mohit@gmail.com>","Alessandro Ruggiero"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8", default-features = false }